# kr-sc-srt

./: .gitignore  README.md  pyproject.toml  requirements.txt
kr_sc_srt/: __init__.py  asr.py  cli.py  download.py  jobs.py  media.py  pipeline.py  runner.py  segments.py  srt.py  state.py  timecode.py  translate.py
notebooks/: colab_soop_kr_to_zh.ipynb
tests/: test_asr.py  test_cli.py  test_download.py  test_pipeline.py  test_segments.py  test_srt.py  test_state.py
