[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kr-sc-srt"
version = "0.1.0"
description = "Two-pass SOOP VOD Korean transcription, Chinese subtitle translation, and hard-sub rendering."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "silero-vad",
  "torch",
  "torchaudio",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
kr-sc-srt = "kr_sc_srt.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
exclude = ["notebooks"]

[tool.mypy]
ignore_missing_imports = true
